Simplify/replace multiple method calls and bad use (#87)